gitops/manifests/glpi/glpi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
  namespace: glpi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: glpi
  template:
    metadata:
      labels:
        app: glpi
    spec:
      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: glpi
          image: glpi/glpi:10.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: glpi-data
              mountPath: /var/glpi
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1000m"
              memory: 1Gi
      volumes:
        - name: glpi-data
          persistentVolumeClaim:
            claimName: glpi-data
---
apiVersion: v1
kind: Service
metadata:
  name: glpi
  namespace: glpi
spec:
  selector:
    app: glpi
  ports:
    - port: 80
      targetPort: 80
